# plutus-starter-kit

./: CHANGELOG.md  README.md  cabal.project  plutus-hello-world.cabal
app/: Main.hs
assets/: .gitignore  contract.addr  contract.plutus  mainnet.addr  testnet.addr  unlock.redeemer
scripts/: compile.sh  contract-balance.sh  dev-wallet-balance.sh  download-params.sh  new-dev-wallet.sh
src/Hello/: Contract.hs  Shared.hs  Utils.hs
