cabal-version:      2.4
name:               plutus-hello-world
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Plutus Hello World

-- A longer description of the package.
description: A simple plutus starter template

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rvcas
maintainer:         x@rvcas.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable plutus-hello-world
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
