cabal-version:      2.4
name:               plutus-hello-world
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Plutus Hello World

-- A longer description of the package.
description:        A simple plutus starter template

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rvcas
maintainer:         x@rvcas.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-language: Haskell2010
  build-depends:    base ^>=4.14.3.0
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise

library
  import:          lang
  exposed-modules:
    Hello.Contract
    Hello.Shared
    Hello.Utils

  hs-source-dirs:  src
  build-depends:
    , bytestring
    , cardano-api
    , filepath
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise

executable plutus-hello-world
  import:           lang
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , optparse-applicative
    , plutus-hello-world
